feat(lang): Updated Russian language (#13) & fixed docs (#12)

--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -4,7 +4,7 @@
   "nav.tabs.settings": "Настройки",
   "nav.error.page-not-found": "Страница не найдена!",
 
-  "issues.search": "Поиск... (#123, Subject, ...)",
+  "issues.search": "Поиск... (по номеру или теме задачи)",
   "issues.search.search-in-project": "Поиск в <badge>{projectName}</badge>",
   "issues.extended-search": "Расширенный поиск",
   "issues.filter": "Фильтр",
@@ -14,7 +14,7 @@
   "issues.filter.hide-completed-issues.description": "Готовность 100%, но еще открыты",
   "issues.list.no-issues": "Нет задач",
   "issues.context-menu.open-in-redmine": "Открыть в Redmine",
-  "issues.context-menu.copy-id-to-clipboard": "Copy to clipboard",
+  "issues.context-menu.copy-id-to-clipboard": "Скопировать номер",
   "issues.context-menu.timer.start": "Запустить таймер",
   "issues.context-menu.timer.pause": "Остановить таймер",
   "issues.context-menu.timer.stop": "Сбросить таймер",
@@ -24,7 +24,7 @@
   "issues.context-menu.remember": "Запомнить задачу",
   "issues.context-menu.forgot": "Забыть задачу",
   "issues.context-menu.pin-and-remember": "Закрепить и запомнить задачу",
-  "issues.id-copied-to-clipboard": "'#{issueId}' copied to clipboard",
+  "issues.id-copied-to-clipboard": "'#{issueId}' скопирован в буфер",
   "issues.issue.pinned": "Задача закреплена наверху",
   "issues.issue.not-assigned-to-me": "Задача не назначена вам",
   "issues.action.toggle-timer.tooltip": "Если выбрано, то <KBD>Ctrl</KBD> + <KBD>Пробел</KBD> запускает/останавливает таймер",
@@ -37,14 +37,14 @@
   "issues.issue-tooltip.priority": "Приоритет",
   "issues.issue-tooltip.assignee": "Назначена",
   "issues.issue-tooltip.version": "Target version",
-  "issues.issue-tooltip.start-date": "Start date",
-  "issues.issue-tooltip.due-date": "Due date",
+  "issues.issue-tooltip.start-date": "Дата начала",
+  "issues.issue-tooltip.due-date": "Срок завершения",
   "issues.issue-tooltip.estimated-time": "Оценка временных затрат",
   "issues.issue-tooltip.spent-time": "Трудозатраты",
   "issues.issue-tooltip.open-in-redmine": "Нажмите, чтобы открыть задачу",
   "issues.version-tooltip.status": "Статус",
-  "issues.version-tooltip.due-date": "Due date",
-  "issues.version-tooltip.open-in-redmine": "Click to open target version",
+  "issues.version-tooltip.due-date": "Срок завершения",
+  "issues.version-tooltip.open-in-redmine": "Нажмите для открытия target version",
   "issues.version.no-version": "(without version)",
   "issues.modal.add-spent-time.title": "Добавление затраченного времени",
   "issues.modal.add-spent-time.date": "Дата",
@@ -59,8 +59,8 @@
   "issues.modal.add-spent-time.comments": "Комментарий",
   "issues.modal.add-spent-time.activity": "Деятельность",
   "issues.modal.add-spent-time.activity.validation.required": "Требуется хотя бы одно созданное действие в «Списки значений»",
-  "issues.modal.add-spent-time.add-notes": "Add notes",
-  "issues.modal.add-spent-time.notes": "Notes",
+  "issues.modal.add-spent-time.add-notes": "Добавление примечаний",
+  "issues.modal.add-spent-time.notes": "Примечания",
   "issues.modal.add-spent-time.submit": "Добавить",
   "issues.modal.save-changes.title": "Сохранение изменений",
   "issues.modal.save-changes.message": "Вы хотите сохранить ваши изменения?",
@@ -68,8 +68,8 @@
   "issues.modal.save-changes.save": "Да, сохранить",
   "issues.error.fail-to-load-issues": "Не удалось загрузить задачи",
 
-  "time.entry-tooltip.project": "Project",
-  "time.entry-tooltip.issue": "Issue",
+  "time.entry-tooltip.project": "Проект",
+  "time.entry-tooltip.issue": "Задача",
   "time.entry-tooltip.activity": "Деятельность",
   "time.entry-tooltip.hours": "Часы",
   "time.error.fail-to-load-data": "Не удалось загрузить данные",
@@ -91,31 +91,31 @@
   "settings.redmine.connection-failed": "Ошибка подключения",
   "settings.redmine.connection-successful": "Подключение успешно!",
   "settings.redmine.hello-user": "Здравствуйте <strong>{firstName} {lastName}</strong> ({accountName})",
-  "settings.redmine.edit": "Edit",
+  "settings.redmine.edit": "Изменить",
   "settings.features": "Дополнительно",
   "settings.features.auto-pause-on-switch.title": "Авто остановка",
   "settings.features.auto-pause-on-switch.description": "Автоматически останавливать таймеры при изменении задачи",
   "settings.features.extended-search.title": "Расширенный поиск",
   "settings.features.extended-search.description": "Разрешить поиск по задачам, которые не назначены на вас",
-  "settings.features.round-time-nearest-quarter-hour.title": "Округлять до ближайших 15 минут",
+  "settings.features.round-time-nearest-quarter-hour.title": "Округление до ближайших 15 минут",
   "settings.features.round-time-nearest-quarter-hour.description": "Округлять таймер до ближайших 15 минут",
-  "settings.features.add-spent-time-for-other-users.title": "Добавлять затраченное время для других пользователей",
+  "settings.features.add-spent-time-for-other-users.title": "Добавление затраченного времени для других пользователей",
   "settings.features.add-spent-time-for-other-users.description": "(Требуются разрешения в Redmine)",
-  "settings.features.add-notes.title": "Add notes",
-  "settings.features.add-notes.description": "Adding notes to an issue",
-  "settings.features.cache-comments.title": "Cache comments",
-  "settings.features.cache-comments.description": "Cache comments until they are submitted",
-  "settings.style": "Styling",
-  "settings.style.sticky-scroll.title": "Sticky scroll",
-  "settings.style.group-issues-by-version.title": "Group issues by target version",
-  "settings.style.show-issues-priority.title": "Show issues priority",
-  "settings.style.sort-issues-by-priority.title": "Sort issues by priority",
-  "settings.style.show-tooltips.title": "Show tooltips",
-  "settings.style.time-format.title": "Time span format",
+  "settings.features.add-notes.title": "Добавление примечаний",
+  "settings.features.add-notes.description": "Добавлять примечания в задачи",
+  "settings.features.cache-comments.title": "Кеширование комментариев",
+  "settings.features.cache-comments.description": "Кешировать комментарии пока они не отправлены",
+  "settings.style": "Отображение",
+  "settings.style.sticky-scroll.title": "Закрепить названия проектов при прокрутке списка задач",
+  "settings.style.group-issues-by-version.title": "Группировать задачи по target version",
+  "settings.style.show-issues-priority.title": "Показывать приоритет задач",
+  "settings.style.sort-issues-by-priority.title": "Сортировать задачи по приоритету",
+  "settings.style.show-tooltips.title": "Показывать всплывающие подсказки",
+  "settings.style.time-format.title": "Формат времени",
   "settings.save-settings": "Сохранить настройки",
   "settings.settings-saved": "Настройки сохранены!",
   "settings.info.version": "Версия: {version}",
-  "settings.info.report-an-issue": "Report an issue",
+  "settings.info.report-an-issue": "Сообщить о проблеме",
 
   "format.hours": "{hours} ч"
 }
