feat: Confirmation dialog for reset timer

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -17,7 +17,7 @@
   "issues.context-menu.copy-id-to-clipboard": "In Zwischenablage kopieren",
   "issues.context-menu.timer.start": "Timer starten",
   "issues.context-menu.timer.pause": "Timer pausieren",
-  "issues.context-menu.timer.stop": "Timer beenden",
+  "issues.context-menu.timer.reset": "Timer zurücksetzen",
   "issues.context-menu.timer.edit": "Timer bearbeiten",
   "issues.context-menu.pin": "Ticket anheften",
   "issues.context-menu.unpin": "Ticket lösen",
@@ -31,7 +31,7 @@
   "issues.timer.action.edit.tooltip": "Doppelklicken zum Bearbeiten",
   "issues.timer.action.start.tooltip": "Klicken, um Timer zu starten",
   "issues.timer.action.pause.tooltip": "Klicken, um Timer zu pausieren",
-  "issues.timer.action.stop.tooltip": "Klicken, um Timer zu beenden",
+  "issues.timer.action.reset.tooltip": "Klicken, um Timer zurückzusetzen",
   "issues.timer.action.add-spent-time.tooltip": "Klicken, um Zeitaufwand hinzuzufügen",
   "issues.issue-tooltip.status": "Status",
   "issues.issue-tooltip.priority": "Priorität",
@@ -66,6 +66,10 @@
   "issues.modal.save-changes.message": "Möchten Sie Ihre Änderungen speichern?",
   "issues.modal.save-changes.cancel": "Nein, abbrechen",
   "issues.modal.save-changes.save": "Ja, speichern",
+  "issues.modal.reset-timer.title": "Timer zurücksetzen?",
+  "issues.modal.reset-timer.message": "Möchten Sie den Timer zurücksetzen?",
+  "issues.modal.reset-timer.cancel": "Nein, abbrechen",
+  "issues.modal.reset-timer.reset": "Ja, zurücksetzen",
   "issues.error.fail-to-load-issues": "Fehler beim Laden der Tickets",
 
   "time.entry-tooltip.project": "Projekt",
