--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -17,7 +17,7 @@
   "issues.context-menu.copy-id-to-clipboard": "Copy to clipboard",
   "issues.context-menu.timer.start": "Start timer",
   "issues.context-menu.timer.pause": "Pause timer",
-  "issues.context-menu.timer.stop": "Stop timer",
+  "issues.context-menu.timer.reset": "Reset timer",
   "issues.context-menu.timer.edit": "Edit timer",
   "issues.context-menu.pin": "Pin issue",
   "issues.context-menu.unpin": "Unpin issue",
@@ -31,7 +31,7 @@
   "issues.timer.action.edit.tooltip": "Double-click to edit",
   "issues.timer.action.start.tooltip": "Click to start timer",
   "issues.timer.action.pause.tooltip": "Click to pause timer",
-  "issues.timer.action.stop.tooltip": "Click to stop timer",
+  "issues.timer.action.reset.tooltip": "Click to reset timer",
   "issues.timer.action.add-spent-time.tooltip": "Click to add spent time",
   "issues.issue-tooltip.status": "Status",
   "issues.issue-tooltip.priority": "Priority",
@@ -65,7 +65,11 @@
   "issues.modal.save-changes.title": "Save changes?",
   "issues.modal.save-changes.message": "Do you want to save your changes?",
   "issues.modal.save-changes.cancel": "No, cancel",
-  "issues.modal.save-changes.save": "Yes, Save",
+  "issues.modal.save-changes.save": "Yes, save",
+  "issues.modal.reset-timer.title": "Reset timer?",
+  "issues.modal.reset-timer.message": "Do you want to reset the timer?",
+  "issues.modal.reset-timer.cancel": "No, cancel",
+  "issues.modal.reset-timer.reset": "Yes, reset timer",
   "issues.error.fail-to-load-issues": "Failed to load issues",
 
   "time.entry-tooltip.project": "Project",
