--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -17,7 +17,7 @@
   "issues.context-menu.copy-id-to-clipboard": "Скопировать номер",
   "issues.context-menu.timer.start": "Запустить таймер",
   "issues.context-menu.timer.pause": "Остановить таймер",
-  "issues.context-menu.timer.stop": "Сбросить таймер",
+  "issues.context-menu.timer.reset": "Сбросить таймер",
   "issues.context-menu.timer.edit": "Изменить таймер",
   "issues.context-menu.pin": "Закрепить задачу",
   "issues.context-menu.unpin": "Открепить задачу",
@@ -31,7 +31,7 @@
   "issues.timer.action.edit.tooltip": "Нажмите 2 раза для редактирования",
   "issues.timer.action.start.tooltip": "Нажмите для запуска таймера",
   "issues.timer.action.pause.tooltip": "Нажмите для остановки таймера",
-  "issues.timer.action.stop.tooltip": "Нажмите для сброса таймера",
+  "issues.timer.action.reset.tooltip": "Нажмите для сброса таймера",
   "issues.timer.action.add-spent-time.tooltip": "Нажмите для добавления затраченного времени",
   "issues.issue-tooltip.status": "Статус",
   "issues.issue-tooltip.priority": "Приоритет",
@@ -66,6 +66,10 @@
   "issues.modal.save-changes.message": "Вы хотите сохранить ваши изменения?",
   "issues.modal.save-changes.cancel": "Нет, отменить",
   "issues.modal.save-changes.save": "Да, сохранить",
+  "issues.modal.reset-timer.title": "Reset timer?",
+  "issues.modal.reset-timer.message": "Do you want to reset the timer?",
+  "issues.modal.reset-timer.cancel": "Нет, отменить",
+  "issues.modal.reset-timer.reset": "Yes, reset timer",
   "issues.error.fail-to-load-issues": "Не удалось загрузить задачи",
 
   "time.entry-tooltip.project": "Проект",
