feat: Create new issues
- Added create new issues modal
- Improved form field components
- Improved language files
- Added category to issue info tooltip
- Added new redemine api methods
- Improved redmine api hooks
- Improved types
- Load users on menu open/focus
- Filter time activities by project

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -9,10 +9,10 @@
   "issues.extended-search": "Erweiterte Suche",
   "issues.filter": "Filter",
   "issues.filter.projects": "Projekte",
-  "issues.filter.projects.no-projects": "Keine Projekte",
+  "issues.filter.projects.no-options": "Keine Projekte",
   "issues.filter.hide-completed-issues.title": "Verstecke fertige Tickets",
   "issues.filter.hide-completed-issues.description": "100% erledigt, aber weiterhin offen",
-  "issues.list.no-issues": "Keine Tickets",
+  "issues.list.no-options": "Keine Tickets",
   "issues.context-menu.open-in-redmine": "In Redmine öffnen",
   "issues.context-menu.copy-id-to-clipboard": "In Zwischenablage kopieren",
   "issues.context-menu.timer.start": "Timer starten",
@@ -27,40 +27,49 @@
   "issues.id-copied-to-clipboard": "'#{issueId}' in Zwischenablage kopieren",
   "issues.issue.pinned": "Ticket ist oben angeheftet",
   "issues.issue.not-assigned-to-me": "Ticket ist Ihnen nicht zugewiesen",
-  "issues.action.toggle-timer.tooltip": "Wenn ausgewählt, <KBD>Strg</KBD> + <KBD>Leertaste</KBD> drücken, um Timer umzuschalten",
+  "issues.timer.action.toggle.tooltip": "Wenn ausgewählt, <KBD>Strg</KBD> + <KBD>Leertaste</KBD> drücken, um Timer umzuschalten",
   "issues.timer.action.edit.tooltip": "Doppelklicken zum Bearbeiten",
   "issues.timer.action.start.tooltip": "Klicken, um Timer zu starten",
   "issues.timer.action.pause.tooltip": "Klicken, um Timer zu pausieren",
   "issues.timer.action.reset.tooltip": "Klicken, um Timer zurückzusetzen",
   "issues.timer.action.add-spent-time.tooltip": "Klicken, um Zeitaufwand hinzuzufügen",
-  "issues.issue-tooltip.status": "Status",
-  "issues.issue-tooltip.priority": "Priorität",
-  "issues.issue-tooltip.assignee": "Zugewiesen an",
-  "issues.issue-tooltip.version": "Zielversion",
-  "issues.issue-tooltip.start-date": "Beginn",
-  "issues.issue-tooltip.due-date": "Abgabedatum",
-  "issues.issue-tooltip.estimated-time": "Geschätzter Aufwand",
-  "issues.issue-tooltip.spent-time": "Aufgewendete Zeit",
   "issues.issue-tooltip.open-in-redmine": "Klicken um Ticket zu öffnen",
-  "issues.version-tooltip.status": "Status",
-  "issues.version-tooltip.due-date": "Fälligkeitsdatum",
-  "issues.version-tooltip.open-in-redmine": "Klicken um Zielversion zu öffnen",
+  "issues.version.field.status": "Status",
+  "issues.version.field.due-date": "Fälligkeitsdatum",
   "issues.version.no-version": "(ohne Zielversion)",
+  "issues.version-tooltip.open-in-redmine": "Klicken um Zielversion zu öffnen",
+  "issues.issue.field.tracker": "Tracker",
+  "issues.issue.field.tracker.validation.required": "Tracker wird benötigt",
+  "issues.issue.field.status": "Status",
+  "issues.issue.field.status.validation.required": "Status wird benötigt",
+  "issues.issue.field.subject": "Thema",
+  "issues.issue.field.subject.validation.required": "Thema wird benötigt",
+  "issues.issue.field.description": "Beschreibung",
+  "issues.issue.field.priority": "Priorität",
+  "issues.issue.field.priority.validation.required": "Priorität wird benötigt",
+  "issues.issue.field.assignee": "Zugewiesen an",
+  "issues.issue.field.assignee.me": "ich",
+  "issues.issue.field.category": "Kategorie",
+  "issues.issue.field.version": "Zielversion",
+  "issues.issue.field.start-date": "Beginn",
+  "issues.issue.field.due-date": "Abgabedatum",
+  "issues.issue.field.estimated-hours": "Geschätzter Aufwand",
+  "issues.issue.field.estimated-hours.validation.greater-than-zero": "Muss größer als 0 sein",
+  "issues.issue.field.spent-time": "Aufgewendete Zeit",
+  "issues.time-entry.field.spent-on": "Datum",
+  "issues.time-entry.field.spent-on.validation.in-future": "Kann nicht in der Zukunft liegen",
+  "issues.time-entry.field.hours": "Stunden",
+  "issues.time-entry.field.hours.validation.required": "Stunden wird benötigt",
+  "issues.time-entry.field.hours.validation.greater-than-zero": "Muss größer als 0 sein",
+  "issues.time-entry.field.hours.validation.less-than-24": "Muss weniger als ein Tag sein",
+  "issues.time-entry.field.user": "Benutzer",
+  "issues.time-entry.field.user.no-options": "Keine Benutzer",
+  "issues.time-entry.field.comments": "Kommentar",
+  "issues.time-entry.field.activity": "Aktivität ",
+  "issues.time-entry.field.activity.validation.required": "Aktivität wird benötigt",
+  "issues.issue.field.notes": "Notizen",
   "issues.modal.add-spent-time.title": "Zeitaufwand hinzuzufügen",
-  "issues.modal.add-spent-time.date": "Datum",
-  "issues.modal.add-spent-time.date.validation.in-future": "Kann nicht in der Zukunft liegen",
-  "issues.modal.add-spent-time.hours": "Stunden",
-  "issues.modal.add-spent-time.hours.validation.required": "Stunden wird benötigt",
-  "issues.modal.add-spent-time.hours.validation.greater-than-zero": "Muss größer als 0 sein",
-  "issues.modal.add-spent-time.hours.validation.less-than-24": "Muss weniger als ein Tag sein",
-  "issues.modal.add-spent-time.user": "Benutzer",
-  "issues.modal.add-spent-time.user.me": "ich",
-  "issues.modal.add-spent-time.user.no-users": "Keine Benutzer",
-  "issues.modal.add-spent-time.comments": "Kommentar",
-  "issues.modal.add-spent-time.activity": "Aktivität ",
-  "issues.modal.add-spent-time.activity.validation.required": "Aktivität wird benötigt",
   "issues.modal.add-spent-time.add-notes": "Notizen hinzufügen",
-  "issues.modal.add-spent-time.notes": "Notizen",
   "issues.modal.add-spent-time.submit": "Erstellen",
   "issues.modal.save-changes.title": "Änderung speichern?",
   "issues.modal.save-changes.message": "Möchten Sie Ihre Änderungen speichern?",
@@ -70,6 +79,8 @@
   "issues.modal.reset-timer.message": "Möchten Sie den Timer zurücksetzen?",
   "issues.modal.reset-timer.cancel": "Nein, abbrechen",
   "issues.modal.reset-timer.reset": "Ja, zurücksetzen",
+  "issues.modal.add-issue.title": "Ticket hinzufügen",
+  "issues.modal.add-issue.submit": "Erstellen",
   "issues.error.fail-to-load-issues": "Fehler beim Laden der Tickets",
 
   "time.entry-tooltip.project": "Projekt",
@@ -122,5 +133,6 @@
   "settings.info.version": "Version: {version}",
   "settings.info.report-an-issue": "Einen Fehler melden",
 
+  "general.no-options": "Keine Optionen",
   "format.hours": "{hours} Std."
 }
