--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -9,10 +9,10 @@
   "issues.extended-search": "Extended search",
   "issues.filter": "Filter",
   "issues.filter.projects": "Projects",
-  "issues.filter.projects.no-projects": "No projects",
+  "issues.filter.projects.no-options": "No projects",
   "issues.filter.hide-completed-issues.title": "Hide completed issues",
   "issues.filter.hide-completed-issues.description": "100% done, but still open",
-  "issues.list.no-issues": "No issues",
+  "issues.list.no-options": "No issues",
   "issues.context-menu.open-in-redmine": "Open in Redmine",
   "issues.context-menu.copy-id-to-clipboard": "Copy to clipboard",
   "issues.context-menu.timer.start": "Start timer",
@@ -27,40 +27,49 @@
   "issues.id-copied-to-clipboard": "'#{issueId}' copied to clipboard",
   "issues.issue.pinned": "Issue is pinned at the top",
   "issues.issue.not-assigned-to-me": "Issue is not assigned to you",
-  "issues.action.toggle-timer.tooltip": "If selected, press <KBD>Ctrl</KBD> + <KBD>Spacebar</KBD> to toggle timer",
+  "issues.timer.action.toggle.tooltip": "If selected, press <KBD>Ctrl</KBD> + <KBD>Spacebar</KBD> to toggle timer",
   "issues.timer.action.edit.tooltip": "Double-click to edit",
   "issues.timer.action.start.tooltip": "Click to start timer",
   "issues.timer.action.pause.tooltip": "Click to pause timer",
   "issues.timer.action.reset.tooltip": "Click to reset timer",
   "issues.timer.action.add-spent-time.tooltip": "Click to add spent time",
-  "issues.issue-tooltip.status": "Status",
-  "issues.issue-tooltip.priority": "Priority",
-  "issues.issue-tooltip.assignee": "Assignee",
-  "issues.issue-tooltip.version": "Target version",
-  "issues.issue-tooltip.start-date": "Start date",
-  "issues.issue-tooltip.due-date": "Due date",
-  "issues.issue-tooltip.estimated-time": "Estimated time",
-  "issues.issue-tooltip.spent-time": "Spent time",
   "issues.issue-tooltip.open-in-redmine": "Click to open issue",
-  "issues.version-tooltip.status": "Status",
-  "issues.version-tooltip.due-date": "Due date",
+  "issues.version.field.status": "Status",
+  "issues.version.field.due-date": "Due date",
   "issues.version-tooltip.open-in-redmine": "Click to open target version",
   "issues.version.no-version": "(without version)",
+  "issues.issue.field.tracker": "Tracker",
+  "issues.issue.field.tracker.validation.required": "Tracker is required",
+  "issues.issue.field.status": "Status",
+  "issues.issue.field.status.validation.required": "Status is required",
+  "issues.issue.field.subject": "Subject",
+  "issues.issue.field.subject.validation.required": "Subject is required",
+  "issues.issue.field.description": "Description",
+  "issues.issue.field.priority": "Priority",
+  "issues.issue.field.priority.validation.required": "Priority is required",
+  "issues.issue.field.assignee": "Assignee",
+  "issues.issue.field.assignee.me": "me",
+  "issues.issue.field.category": "Category",
+  "issues.issue.field.version": "Target version",
+  "issues.issue.field.start-date": "Start date",
+  "issues.issue.field.due-date": "Due date",
+  "issues.issue.field.estimated-hours": "Estimated hours",
+  "issues.issue.field.estimated-hours.validation.greater-than-zero": "Must be greater than 0",
+  "issues.issue.field.spent-time": "Spent time",
+  "issues.time-entry.field.spent-on": "Date",
+  "issues.time-entry.field.spent-on.validation.in-future": "Cannot be in the future",
+  "issues.time-entry.field.hours": "Hours",
+  "issues.time-entry.field.hours.validation.required": "Hours is required",
+  "issues.time-entry.field.hours.validation.greater-than-zero": "Must be greater than 0",
+  "issues.time-entry.field.hours.validation.less-than-24": "Must be less than one day",
+  "issues.time-entry.field.user": "User",
+  "issues.time-entry.field.user.no-options": "No users",
+  "issues.time-entry.field.comments": "Comments",
+  "issues.time-entry.field.activity": "Activity",
+  "issues.time-entry.field.activity.validation.required": "Activity is required",
+  "issues.issue.field.notes": "Notes",
   "issues.modal.add-spent-time.title": "Add spent time",
-  "issues.modal.add-spent-time.date": "Date",
-  "issues.modal.add-spent-time.date.validation.in-future": "Cannot be in the future",
-  "issues.modal.add-spent-time.hours": "Hours",
-  "issues.modal.add-spent-time.hours.validation.required": "Hours is required",
-  "issues.modal.add-spent-time.hours.validation.greater-than-zero": "Must be greater than 0",
-  "issues.modal.add-spent-time.hours.validation.less-than-24": "Must be less than one day",
-  "issues.modal.add-spent-time.user": "User",
-  "issues.modal.add-spent-time.user.me": "me",
-  "issues.modal.add-spent-time.user.no-users": "No users",
-  "issues.modal.add-spent-time.comments": "Comments",
-  "issues.modal.add-spent-time.activity": "Activity",
-  "issues.modal.add-spent-time.activity.validation.required": "Activity is required",
   "issues.modal.add-spent-time.add-notes": "Add notes",
-  "issues.modal.add-spent-time.notes": "Notes",
   "issues.modal.add-spent-time.submit": "Create",
   "issues.modal.save-changes.title": "Save changes?",
   "issues.modal.save-changes.message": "Do you want to save your changes?",
@@ -70,6 +79,8 @@
   "issues.modal.reset-timer.message": "Do you want to reset the timer?",
   "issues.modal.reset-timer.cancel": "No, cancel",
   "issues.modal.reset-timer.reset": "Yes, reset timer",
+  "issues.modal.add-issue.title": "Add issue",
+  "issues.modal.add-issue.submit": "Create",
   "issues.error.fail-to-load-issues": "Failed to load issues",
 
   "time.entry-tooltip.project": "Project",
@@ -122,5 +133,6 @@
   "settings.info.version": "Version: {version}",
   "settings.info.report-an-issue": "Report an issue",
 
+  "general.no-options": "No options",
   "format.hours": "{hours} h"
 }
