--- a/src/lang/ru.json
+++ b/src/lang/ru.json
@@ -9,10 +9,10 @@
   "issues.extended-search": "Расширенный поиск",
   "issues.filter": "Фильтр",
   "issues.filter.projects": "Проекты",
-  "issues.filter.projects.no-projects": "Нет проектов",
+  "issues.filter.projects.no-options": "Нет проектов",
   "issues.filter.hide-completed-issues.title": "Скрыть выполненные задачи",
   "issues.filter.hide-completed-issues.description": "Готовность 100%, но еще открыты",
-  "issues.list.no-issues": "Нет задач",
+  "issues.list.no-options": "Нет задач",
   "issues.context-menu.open-in-redmine": "Открыть в Redmine",
   "issues.context-menu.copy-id-to-clipboard": "Скопировать номер",
   "issues.context-menu.timer.start": "Запустить таймер",
@@ -27,40 +27,49 @@
   "issues.id-copied-to-clipboard": "'#{issueId}' скопирован в буфер",
   "issues.issue.pinned": "Задача закреплена наверху",
   "issues.issue.not-assigned-to-me": "Задача не назначена вам",
-  "issues.action.toggle-timer.tooltip": "Если выбрано, то <KBD>Ctrl</KBD> + <KBD>Пробел</KBD> запускает/останавливает таймер",
+  "issues.timer.action.toggle.tooltip": "Если выбрано, то <KBD>Ctrl</KBD> + <KBD>Пробел</KBD> запускает/останавливает таймер",
   "issues.timer.action.edit.tooltip": "Нажмите 2 раза для редактирования",
   "issues.timer.action.start.tooltip": "Нажмите для запуска таймера",
   "issues.timer.action.pause.tooltip": "Нажмите для остановки таймера",
   "issues.timer.action.reset.tooltip": "Нажмите для сброса таймера",
   "issues.timer.action.add-spent-time.tooltip": "Нажмите для добавления затраченного времени",
-  "issues.issue-tooltip.status": "Статус",
-  "issues.issue-tooltip.priority": "Приоритет",
-  "issues.issue-tooltip.assignee": "Назначена",
-  "issues.issue-tooltip.version": "Target version",
-  "issues.issue-tooltip.start-date": "Дата начала",
-  "issues.issue-tooltip.due-date": "Срок завершения",
-  "issues.issue-tooltip.estimated-time": "Оценка временных затрат",
-  "issues.issue-tooltip.spent-time": "Трудозатраты",
   "issues.issue-tooltip.open-in-redmine": "Нажмите, чтобы открыть задачу",
-  "issues.version-tooltip.status": "Статус",
-  "issues.version-tooltip.due-date": "Срок завершения",
+  "issues.version.field.status": "Статус",
+  "issues.version.field.due-date": "Срок завершения",
   "issues.version-tooltip.open-in-redmine": "Нажмите для открытия target version",
   "issues.version.no-version": "(without version)",
+  "issues.issue.field.tracker": "Tracker",
+  "issues.issue.field.tracker.validation.required": "Tracker is required",
+  "issues.issue.field.status": "Статус",
+  "issues.issue.field.status.validation.required": "Status is required",
+  "issues.issue.field.subject": "Subject",
+  "issues.issue.field.subject.validation.required": "Subject is required",
+  "issues.issue.field.description": "Description",
+  "issues.issue.field.priority": "Приоритет",
+  "issues.issue.field.priority.validation.required": "Priority is required",
+  "issues.issue.field.assignee": "Назначена",
+  "issues.issue.field.assignee.me": "мне",
+  "issues.issue.field.category": "Category",
+  "issues.issue.field.version": "Target version",
+  "issues.issue.field.start-date": "Дата начала",
+  "issues.issue.field.due-date": "Срок завершения",
+  "issues.issue.field.estimated-hours": "Оценка временных затрат",
+  "issues.issue.field.estimated-hours.validation.greater-than-zero": "Must be greater than 0",
+  "issues.issue.field.spent-time": "Трудозатраты",
+  "issues.time-entry.field.spent-on": "Дата",
+  "issues.time-entry.field.spent-on.validation.in-future": "Не может быть позже текущей даты",
+  "issues.time-entry.field.hours": "Часы",
+  "issues.time-entry.field.hours.validation.required": "Укажите часы",
+  "issues.time-entry.field.hours.validation.greater-than-zero": "Должно быть больше 0",
+  "issues.time-entry.field.hours.validation.less-than-24": "Должно быть не больше 24 часов",
+  "issues.time-entry.field.user": "Пользователь",
+  "issues.time-entry.field.user.no-options": "No users",
+  "issues.time-entry.field.comments": "Комментарий",
+  "issues.time-entry.field.activity": "Деятельность",
+  "issues.time-entry.field.activity.validation.required": "Требуется хотя бы одно созданное действие в «Списки значений»",
+  "issues.issue.field.notes": "Примечания",
   "issues.modal.add-spent-time.title": "Добавление затраченного времени",
-  "issues.modal.add-spent-time.date": "Дата",
-  "issues.modal.add-spent-time.date.validation.in-future": "Не может быть позже текущей даты",
-  "issues.modal.add-spent-time.hours": "Часы",
-  "issues.modal.add-spent-time.hours.validation.required": "Укажите часы",
-  "issues.modal.add-spent-time.hours.validation.greater-than-zero": "Должно быть больше 0",
-  "issues.modal.add-spent-time.hours.validation.less-than-24": "Должно быть не больше 24 часов",
-  "issues.modal.add-spent-time.user": "Пользователь",
-  "issues.modal.add-spent-time.user.me": "<< мне >>",
-  "issues.modal.add-spent-time.user.no-users": "No users",
-  "issues.modal.add-spent-time.comments": "Комментарий",
-  "issues.modal.add-spent-time.activity": "Деятельность",
-  "issues.modal.add-spent-time.activity.validation.required": "Требуется хотя бы одно созданное действие в «Списки значений»",
   "issues.modal.add-spent-time.add-notes": "Добавление примечаний",
-  "issues.modal.add-spent-time.notes": "Примечания",
   "issues.modal.add-spent-time.submit": "Добавить",
   "issues.modal.save-changes.title": "Сохранение изменений",
   "issues.modal.save-changes.message": "Вы хотите сохранить ваши изменения?",
@@ -70,6 +79,8 @@
   "issues.modal.reset-timer.message": "Do you want to reset the timer?",
   "issues.modal.reset-timer.cancel": "Нет, отменить",
   "issues.modal.reset-timer.reset": "Yes, reset timer",
+  "issues.modal.add-issue.title": "Add issue",
+  "issues.modal.add-issue.submit": "Create",
   "issues.error.fail-to-load-issues": "Не удалось загрузить задачи",
 
   "time.entry-tooltip.project": "Проект",
@@ -122,5 +133,6 @@
   "settings.info.version": "Версия: {version}",
   "settings.info.report-an-issue": "Сообщить о проблеме",
 
+  "general.no-options": "No options",
   "format.hours": "{hours} ч"
 }
