--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -80,6 +80,8 @@
   "issues.modal.reset-timer.cancel": "Nein, abbrechen",
   "issues.modal.reset-timer.reset": "Ja, zurücksetzen",
   "issues.modal.add-issue.title": "Ticket hinzufügen",
+  "issues.modal.add-issue.tracker-with-no-enabled-fields.warning": "Es scheint, dass Sie eine Redmine-Version < 5.0.0 verwenden. Einige Felder werden möglicherweise nicht übernommen",
+  "issues.modal.add-issue.unknown-workflow-permissions.warning": "Es ist möglich, dass einige Felder aufgrund fehlender Berechtigungen in Redmine nicht übernommen werden. Derzeit gibt es keine Möglichkeit, diese Berechtigungen zu überprüfen",
   "issues.modal.add-issue.submit": "Erstellen",
   "issues.error.fail-to-load-issues": "Fehler beim Laden der Tickets",
 
@@ -132,6 +134,8 @@
   "settings.settings-saved": "Einstellungen gespeichert!",
   "settings.info.version": "Version: {version}",
   "settings.info.report-an-issue": "Einen Fehler melden",
+
+  "dismissible-warning.dont-show-again": "Nicht erneut anzeigen",
 
   "general.no-options": "Keine Optionen",
   "format.hours": "{hours} Std."
